--- a/packages/apps/spaces/package.json
+++ b/packages/apps/spaces/package.json
@@ -8,6 +8,7 @@
     "build": "next build",
     "build:cluster": "env-cmd -f .env.cluster next build",
     "start": "next start",
+    "codegen:variants": "ts-node scripts/codegen-tw-variants.ts",
     "codegen:graphql": "graphql-codegen --require dotenv/config --config scripts/codegen-graphql.ts",
     "codegen:icons": "node scripts/codegen-icons.js",
     "codegen:logos": "node scripts/codegen-logos.js",
@@ -44,6 +45,8 @@
     "axios": "^1.6.4",
     "bufferutil": "^4.0.8",
     "chakra-react-select": "^4.7.6",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "compressorjs": "^1.2.1",
     "d3": "^7.8.5",
     "date-fns": "^2.29.3",
@@ -122,20 +125,26 @@
     "@types/react-lottie": "^1.2.10",
     "@types/sanitize-html": "^2.8.0",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "autoprefixer": "^10.4.18",
     "env-cmd": "^10.1.0",
     "eslint": "^8.33.0",
     "eslint-config-next": "^13.1.6",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-perfectionist": "^2.2.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "glob": "^10.3.10",
     "is-ci": "^3.0.1",
     "jest": "^29.7.0",
     "js-cookie": "^3.0.5",
     "lint-staged": "^13.1.1",
     "msw": "^1.2.1",
+    "postcss": "^8.4.35",
     "prettier": "^2.8.4",
     "react-devtools": "^4.27.2",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.0.4"
   },
   "resolutions": {
