--- a/packages/apps/spaces/package.json
+++ b/packages/apps/spaces/package.json
@@ -20,7 +20,6 @@
     "postinstall": "node scripts/setup-precommit-hook"
   },
   "dependencies": {
-    "@ark-ui/react": "^2.2.3",
     "@chakra-ui/next-js": "^2.1.4",
     "@chakra-ui/react": "^2.7.1",
     "@dnd-kit/core": "^6.1.0",
@@ -32,6 +31,7 @@
     "@integration-app/react": "^0.2.1",
     "@next/bundle-analyzer": "^13.5.3",
     "@novu/notification-center": "^0.22.0",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@react-spring/web": "^9.7.3",
     "@remirror/pm": "^2.0.8",
     "@remirror/react": "^2.0.27",
@@ -144,7 +144,6 @@
     "react-devtools": "^4.27.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
-    "tailwindcss-animate": "^1.0.7",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.0.4"
