--- a/packages/apps/spaces/package.json
+++ b/packages/apps/spaces/package.json
@@ -33,6 +33,7 @@
     "@next/bundle-analyzer": "^13.5.3",
     "@novu/notification-center": "^0.22.0",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-spring/web": "^9.7.3",
     "@remirror/pm": "^2.0.8",
