--- a/deployment/docker-compose.yaml
+++ b/deployment/docker-compose.yaml
@@ -163,7 +163,7 @@ services:
     environment:
       - POSTGRES_HOST=postgres
       - NEO4J_TARGET=neo4j://neo4j:7687
-      - EVENTS_PROCESSING_PLATFORM_URL=events-processing-platform:5001
+      - EVENTS_PROCESSING_PLATFORM_URL=host.docker.internal:5001
 
   customer-os-api:
     image: ghcr.io/openline-ai/openline-customer-os/customer-os-api:latest
@@ -176,7 +176,7 @@ services:
     environment:
       - POSTGRES_HOST=postgres
       - NEO4J_TARGET=neo4j://neo4j:7687
-      - EVENTS_PROCESSING_PLATFORM_URL=events-processing-platform:5001
+      - EVENTS_PROCESSING_PLATFORM_URL=host.docker.internal:5001
 
   events-processing-platform:
     image: ghcr.io/openline-ai/openline-customer-os/events-processing-platform:latest
@@ -190,10 +190,10 @@ services:
       - EVENT_STORE_CONNECTION_STRING=esdb://host.docker.internal:2113
       - POSTGRES_HOST=postgres
       - NEO4J_TARGET=neo4j://neo4j:7687
-      - VALIDATION_API_URL=http://validation-api:10003
-      - FILE_STORE_API_URL=http://file-store-api:10001
-      - EVENTS_PROCESSING_PLATFORM_URL=events-processing-platform:5001
-      - OPENAI_API_PATH=http://openai-api:10101
+      - VALIDATION_API_URL=http://host.docker.internal:10003
+      - FILE_STORE_API_URL=http://host.docker.internal:10001
+      - EVENTS_PROCESSING_PLATFORM_URL=host.docker.internal:5001
+      - OPENAI_API_PATH=http://host.docker.internal:10101
 
   events-processing-platform-subscribers:
     image: ghcr.io/openline-ai/openline-customer-os/events-processing-platform-subscribers:latest
@@ -205,8 +205,8 @@ services:
       - EVENT_STORE_CONNECTION_STRING=esdb://host.docker.internal:2113
       - POSTGRES_HOST=postgres
       - NEO4J_TARGET=neo4j://neo4j:7687
-      - EVENTS_PROCESSING_PLATFORM_URL=events-processing-platform:5001
-      - OPENAI_API_PATH=http://openai-api:10101
+      - EVENTS_PROCESSING_PLATFORM_URL=host.docker.internal:5001
+      - OPENAI_API_PATH=http://host.docker.internal:10101
 
   customer-os-webhooks:
     image: ghcr.io/openline-ai/openline-customer-os/customer-os-webhooks:latest
@@ -219,7 +219,7 @@ services:
     environment:
       - POSTGRES_HOST=postgres
       - NEO4J_TARGET=neo4j://neo4j:7687
-      - EVENTS_PROCESSING_PLATFORM_URL=events-processing-platform:5001
+      - EVENTS_PROCESSING_PLATFORM_URL=host.docker.internal:5001
 
   user-admin-api:
     image: ghcr.io/openline-ai/openline-customer-os/user-admin-api:latest
@@ -232,8 +232,8 @@ services:
     environment:
       - POSTGRES_HOST=postgres
       - NEO4J_TARGET=neo4j://neo4j:7687
-      - EVENTS_PROCESSING_PLATFORM_URL=events-processing-platform:5001
-      - CUSTOMER_OS_API=http://customer-os-api:10000/admin/query
+      - EVENTS_PROCESSING_PLATFORM_URL=host.docker.internal:5001
+      - CUSTOMER_OS_API=http://host.docker.internal:10000/admin/query
 
   file-store-api:
     image: ghcr.io/openline-ai/openline-customer-os/file-store-api:latest
@@ -246,7 +246,9 @@ services:
     environment:
       - POSTGRES_HOST=postgres
       - NEO4J_TARGET=neo4j://neo4j:7687
-      - CUSTOMER_OS_API=http://customer-os-api:10000/query
+      - CUSTOMER_OS_API=http://host.docker.internal:10000/query
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
 
   validation-api:
     image: ghcr.io/openline-ai/openline-customer-os/validation-api:latest
@@ -295,8 +297,8 @@ services:
     environment:
       - POSTGRES_HOST=postgres
       - NEO4J_TARGET=neo4j://neo4j:7687
-      - CUSTOMER_OS_API=http://customer-os-api:10000/query
-      - FILE_STORE_API=http://file-store-api:10001
+      - CUSTOMER_OS_API=http://host.docker.internal:10000/query
+      - FILE_STORE_API=http://host.docker.internal:10001
 
   anthropic-api:
     image: ghcr.io/openline-ai/openline-customer-os/anthropic-api:latest
