--- a/packages/apps/spaces/package.json
+++ b/packages/apps/spaces/package.json
@@ -94,6 +94,7 @@
     "react-inverted-form": "^1.2.15",
     "react-lottie": "^1.2.4",
     "react-markdown": "^9.0.0",
+    "react-select": "^5.8.0",
     "react-textarea-autosize": "^8.5.2",
     "react-toastify": "^9.1.1",
     "react-virtuoso": "4.5.1",
