--- a/packages/apps/spaces/package.json
+++ b/packages/apps/spaces/package.json
@@ -23,6 +23,7 @@
     "@ark-ui/react": "^2.2.3",
     "@chakra-ui/next-js": "^2.1.4",
     "@chakra-ui/react": "^2.7.1",
+    "@date-fns/utc": "^1.2.0",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@emotion/react": "^11.11.3",
@@ -55,7 +56,7 @@
     "compressorjs": "^1.2.1",
     "d3": "^7.8.5",
     "date-fns": "^2.29.3",
-    "date-fns-tz": "^2.0.0",
+    "date-fns-tz": "^2.0.1",
     "dotenv": "^16.0.3",
     "encoding": "^0.1.13",
     "filepond": "^4.30.6",
