--- a/packages/apps/spaces/package.json
+++ b/packages/apps/spaces/package.json
@@ -32,6 +32,7 @@
     "@integration-app/react": "^0.2.1",
     "@next/bundle-analyzer": "^13.5.3",
     "@novu/notification-center": "^0.24.0",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-switch": "^1.0.3",
