--- a/packages/apps/www/package.json
+++ b/packages/apps/www/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@algolia/client-search": "^4.21.1",
+    "@astrojs/cloudflare": "^10.0.2",
     "@astrojs/image": "^0.18.0",
     "@astrojs/mdx": "^0.19.1",
     "@astrojs/sitemap": "^1.3.1",
